--- a/src/CodeIndex.VisualStudioExtension/Resources/ExtensionResourceDictionary.xaml
+++ b/src/CodeIndex.VisualStudioExtension/Resources/ExtensionResourceDictionary.xaml
@@ -11,9 +11,8 @@
         <Setter Property="Foreground" Value="White"/>
     </Style>
     <Style TargetType="{x:Type ComboBox}" x:Key="CommonComboBox">
-        <Style.Resources>
-            <SolidColorBrush x:Key="TextBox.Static.Background" Color="#FF2D2D30"/>
-        </Style.Resources>
+        <Setter Property="Background" Value="#FF434343"/>
+        <!--<Setter Property="Foreground" Value="White"/>-->
     </Style>
     <Style TargetType="{x:Type DataGridRow}" x:Key="BaseGridStyle">
         <Setter Property="Foreground" Value="White"/>
@@ -134,6 +133,7 @@
         </Setter>
     </Style>
     <local:StringToXamlConverter x:Key="StringToXamlConverter" />
+    <local:HintWordConverter x:Key="HintWordConverter" />
     <ItemsPanelTemplate x:Key="ItemsPanelTemplateHorizontal">
         <WrapPanel Orientation="Horizontal" Margin="0,0,0,0"/>
     </ItemsPanelTemplate>
